# latency

./: .gitignore  Dockerfile  README.md  main.tf  outputs.tf  requirements.txt  variables.tf
1-fastapi-ec2/: main.tf  outputs.tf  providers.tf  variables.tf
1-fastapi-ec2/src/: bootstrap.sh  main.py  requirements.txt
10-eks-rabbitmq/: calc.py  docker.tf  eks.tf  helm_release.tf  kubernetes.tf  main.tf  outputs.tf  providers.tf  rabbitmq.py  terragrunt.hcl  variables.tf
10-eks-rabbitmq/eks/: eks.tf  outputs.tf  providers.tf  variables.tf
10-eks-rabbitmq/k8s-i/: helm_release.tf  karpenter.tf  kubernetes.tf  outputs.tf  providers.tf  terragrunt.hcl  (+1 more)
2-lambda-python-s3/: main.tf  providers.tf  variables.tf
2-lambda-s3/: hits.py  main.tf  variables.tf
3-lambda-dynamodb/: hits.py  main.tf  variables.tf
3-lambda-python-dynamodb/: hits.py  main.tf  providers.tf  variables.tf
4-lambda-js-dynamodb/: hits.js  main.tf  providers.tf  variables.tf
5-fargate-ecs/: main.tf  network.tf  outputs.tf  variables.tf
5-lambda-c++-dynamodb/: CMakeLists.txt  hits.cpp  main.cpp  main.tf  outputs.tf  providers.tf  variables.tf
6-fargate-ecs/: main.tf
6-k8s/: destroy.sh
6-lambda-rust-dynamodb/: main.tf  outputs.tf  providers.tf
6-lambda-rust-dynamodb/hits/: Cargo.toml  hits.rs
7-fargate-ecs/: main.tf  providers.tf  variables.tf
7-k8s/: apply.sh  deployment.yaml
8-k8s/: apply.sh
9-lambda-sqs/: calc.py  main.tf  outputs.tf  providers.tf  variables.tf
common/: index.html
test/: lambda-latency.py  latency.py  main.tf  rabbitmq.py  requirements.txt  sqs.py
(+9 files in other folders)
